# web-kraken

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  index.js  nx.json  package-lock.json  package.json  pnpm-lock.yaml  test.js  tsconfig.base.json
.github/: ci.yml
.github/workflows/: ci.yml
WASM-Analyzer/: package-lock.json  package.json
WASM-Analyzer/src/: decs.d.ts
WASM-Crawler/: package-lock.json  package.json  tsconfig.json
WASM-Crawler/src/: decs.d.ts  index.ts
apps/analyzer/: project.json
apps/big-data-pipeline/transformation/: README.md  dbt_project.yml  profiles.yml  pyproject.toml
apps/big-data-pipeline/transformation/transformation/macros/: generate_schema_name.sql  schema.yml  test_is_2xx.sql
apps/big-data-pipeline/transformation/transformation/models/docs/: docs__common_crawl.md  docs__intermediate.md
apps/big-data-pipeline/transformation/transformation/models/docs/sources/: docs__common_crawl.md  docs__country_codes.md  docs__web_technologies.md
apps/big-data-pipeline/transformation/transformation/models/marts/core/: dimension_framework.sql  dimension_web_technology.sql  fact_website.sql  schema.yml
apps/big-data-pipeline/transformation/transformation/models/staging/: schema.yml  staging_common_crawl.sql  staging_country_codes.sql  staging_web_technologies.sql
apps/big-data-pipeline/transformation/transformation/seeds/: schema.yml  seed_common_crawl.csv  seed_country_codes.csv  seed_web_technologies.csv
apps/crawler/: Dockerfile  (+3 more)
commands/: funcls.js  opcode.js  opcodecnt.js
src/: index.ts  util.js
(+164 files in other folders)
